--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -2,7 +2,7 @@
 
 gameDLL:
 {
-	path:											"game_dll/cmake-build-debug/libgame_dll.so"
+	path:											"game_dll/x64/Release/game_dll.dll"
 }
 
 // "_empty" is already imported in order to build logic around it
