Viewport freeze and tone mapping

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -22,7 +22,7 @@ inputSettings: {
 		MoveLeft:		["A","LEFT"]
 		MoveRight:		["D","RIGHT"]
 		MoveUp:			["SPACE"]
-		CullingDebug:	["TAB"]
+		ViewportFreeze:	["TAB"]
 		Exit:			["ESCAPE"]
 	}
 }
