Monte Carlo reference

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -3,7 +3,8 @@
 // "empty" is already imported in order to build logic around it
 imports: 
 {
-	map:					"Sponza.gltf"
+	map:					"sponzaModel/Sponza.gltf"
+	env_test:				"environmentTest/environment.gltf"
 }
 
 fabs: 
@@ -12,6 +13,11 @@ fabs:
 	{
 		basedOn:			"map/Scene"
 	}
+	env_test_fab:
+	{
+		basedOn:			"env_test"
+	}
+	
 }
 
 init: 
