Improve Monte Carlo

--- a/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Sponza/gameConfig.cfg
@@ -15,7 +15,7 @@ fabs:
 	}
 	env_test_fab:
 	{
-		basedOn:			"env_test"
+		basedOn:			"env_test/Scene"
 	}
 	
 }
@@ -23,4 +23,5 @@ fabs:
 init: 
 {
 	scene:					"level"
+	test:					"env_test_fab"
 }
