--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -130,7 +130,8 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/HelperUtils.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/ImagesInterfaces.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/RendererBase.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/TLASinstance.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/TLASbuilder.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/Exposure.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/Meshes/AnimationsDataOfNodes.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/Meshes/MaterialsOfPrimitives.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/Meshes/MeshesOfNodes.h"
@@ -191,7 +192,8 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/VulkanInit.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/HelperUtils.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/ImagesInterfaces.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/TLASinstance.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/TLASbuilder.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Exposure.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Meshes/AnimationsDataOfNodes.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Meshes/MaterialsOfPrimitives.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Meshes/MeshesOfNodes.cpp"
